--- a/maquetteBase1 - Copie.html
+++ b/maquetteBase1 - Copie.html
@@ -7,11 +7,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-
+    <link rel="stylesheet" href="css/stylesheader.css">
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/test.css" />
-    <link rel="stylesheet" href="css/stylesheader.css" />
 
     <link
       rel="stylesheet"
@@ -236,10 +235,182 @@
         </div>
       </div>
     </section>
+    <!-- DIV COUNTER SYL -->
+    <section class="counterZoneParent">
+      <!-- image large -->
+      <div class="w-100 imageCounter">
+        <img src="images/femme-medecin01.jpg" alt="" class="w-100">
+      </div>
+      
+      <!-- counter -->
+      <!-- <i class="fas fa-trophy"></i>
+      <i class="far fa-user"></i>
+      <i class="fas fa-heartbeat"></i>
+      <i class="fas fa-tv"></i>
+      <i class="far fa-thumbs-up"></i>
+      <i class="fas fa-eraser"></i> -->
+
+      <div class="bg-primary text-white p-5 counterZone">
+        <p class="text-gris m-0">ABOUT MEDICAL</p>
+        <h3>Powered By Over 1,503 Patients Trust Us<br>With Their Sweet Love.</h3>
+        <div class="row no-gutters">
+          <div class="col-3 border-bottom">
+            <div class="m-3 d-flex">
+              <i class="fas fa-trophy"></i>
+              <div class="d-flex flex-column ml-2 counterText">
+                <p><span data-toggle="counter-up">99999</span></p>
+                <p class="text-gris">Award Win</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-3 border border-top-0">
+            <div class="m-3 d-flex">
+              <i class="far fa-user"></i>
+              <div class="d-flex flex-column ml-2 counterText">
+                <p><span data-toggle="counter-up">99999</span></p>
+                <p class="text-gris">Qualified Staff</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-3 border-bottom">
+            <div class="m-3 d-flex">
+              <i class="fas fa-heartbeat"></i>
+              <div class="d-flex flex-column ml-2 counterText">
+                <p><span data-toggle="counter-up">99999</span></p>
+                <p class="text-gris">Machines</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-1"></div>
+          <div class="col-3">
+            <div class="m-3 d-flex">
+              <i class="fas fa-tv"></i>
+              <div class="d-flex flex-column ml-2 counterText">
+                <p><span data-toggle="counter-up">99999</span></p>
+                <p class="text-gris">Hospital Rooms</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-3 border-left border-right">
+            <div class="m-3 d-flex">
+              <i class="far fa-thumbs-up"></i>
+              <div class="d-flex flex-column ml-2 counterText">
+                <p><span data-toggle="counter-up">99999</span></p>
+                <p class="text-gris">Happy Patients</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="m-3 d-flex">
+              <i class="fas fa-eraser"></i>
+              <div class="d-flex flex-column ml-2 counterText">
+                <p><span data-toggle="counter-up">99999</span></p>
+                <p class="text-gris">Suppliers</p>
+              </div>
+            </div>
+          </div>          
+        </div>
+      </div>
+      
+      <!-- high quality -->
+      <div class="chimiste"><!-- image -->
+        <div class="py-5"><!-- transparent -->
+
+          <div class="container mt-5"><!-- text -->
+            <div class="d-flex justify-content-between">
+              <div>
+                <p class="text-gris m-0">WE OFFER SERVICES</p>
+                <h3 class="text-white font-weight-bold">Special High-quality Services</h3>
+                <p class="text-gris">Since its fouding Delmont has been providing its patients with the full medical care, encompassing outpatients services, is<br>neurology, laboratory, imaging diagnostics and more.</p>
+              </div>
+              <div class="d-flex">
+                <button type="button" class="btn btn-outline-light p-2 align-self-center"><b>MORE SERVICES</b></button>
+              </div>
+            </div>
+          </div>
+
+          <!-- card -->
+          <div class="container text-white my-5">
+            <div class="row">
+              <div class="card border-secondary p-2 col-3">
+                <div class="card-body">
+                  <h5 class="card-title">Internists</h5>
+                  <p class="card-text text-gris">For normal & complex disease.<br>Subspecialties in sleep<br>medicine, cancer ets.</p>
+                </div>
+                <div class="card-body text-primary">
+                  <i class="fas fa-user-md"></i>
+                </div>
+                <div class="card-footer border-top-0">
+                  <a href="#">VIEW MORE</a>
+                </div>
+              </div>
+
+              <div class="card border-secondary p-2 col-3">
+                <div class="card-body">
+                  <h5 class="card-title">Osteopaths</h5>
+                  <p class="card-text text-gris">DOs are just like MDs.<br>Recommend for a "whole body"<br>approach.</p>
+                </div>
+                <div class="card-body text-primary">
+                  <i class="fas fa-briefcase-medical"></i>
+                </div>
+                <div class="card-footer border-top-0">
+                  <a href="#">VIEW MORE</a>
+                </div>
+              </div>
+
+              <div class="card border-secondary p-2 col-3">
+                <div class="card-body">
+                  <h5 class="card-title">Oncologists</h5>
+                  <p class="card-text text-gris">An Internists! to cure cancer,<br>work with radiation oncologists<br>& surgeons.</p>
+                </div>
+                <div class="card-body text-primary">
+                  <i class="fas fa-procedures"></i>
+                </div>
+                <div class="card-footer border-top-0">
+                  <a href="#">VIEW MORE</a>
+                </div>
+              </div>
+
+              <div class="card border-secondary p-2 col-3">
+                <div class="card-body">
+                  <h5 class="card-title">Podiatrists</h5>
+                  <p class="card-text text-gris">The specialists who help with<br>problems that affect your feet<br>or lower legs.</p>
+                </div>
+                <div class="card-body text-primary">
+                  <i class="fas fa-crutch"></i>
+                </div>
+                <div class="card-footer border-top-0">
+                  <a href="#">VIEW MORE</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <p class="font-weight-bold text-center text-gris m-0 mb-5">Don't hesitate, contact us for better help and services. <a href="#" class="text-white">Let's get started</a></p>
+
+        </div>
+      </div>
+
+    </section>
+    <!-- 
+
+      <i class="fas fa-trophy"></i>
+      <i class="far fa-user"></i>
+      <i class="fas fa-heartbeat"></i>
+      <i class="fas fa-tv"></i>
+      <i class="far fa-thumbs-up"></i>
+      <i class="fas fa-eraser"></i>
+
+      <i class="fas fa-user-md"></i>
+      <i class="fas fa-briefcase-medical"></i>
+      <i class="fas fa-procedures"></i>
+      <i class="fas fa-crutch"></i>
+
+     -->
+    <!-- DIV COUNTER SYL -->
 
     <!-- YASSINE -->
     <div class="container yassine">
-      <h5 class="text-gris">MEET OUR EXPERIENCED TEAM</h5>
+      <h5>MEET OUR EXPERIENCED TEAM</h5>
       <h2>Our Dedicated Doctors Team</h2>
       <p class="">
         We offer extensive medical procedures to outbound and inbound patients
